// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debug children option: Debugging disabled by context overrides context options. 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={false}
        debugOptions={
          Object {
            "debugChildren": true,
          }
        }
        id="a"
      >
        <div
          className=""
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              debug={false}
              debugOptions={
                Object {
                  "debugChildren": true,
                }
              }
              id="b"
            >
              <div
                className=""
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={false}
                    debugOptions={
                      Object {
                        "debugChildren": true,
                      }
                    }
                    id="c"
                  >
                    <div
                      className=""
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug children option: Element overrides disabled child debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debugOptions={
        Object {
          "debugChildren": false,
        }
      }
      id="a"
    >
      <Box
        debug={true}
        debugOptions={
          Object {
            "debugChildren": false,
          }
        }
        id="a"
      >
        <div
          className="debug"
          id="a"
        >
          <Box.WithDebug
            debug={true}
            id="b"
          >
            <Box
              debug={true}
              debugOptions={
                Object {
                  "debugChildren": false,
                }
              }
              id="b"
            >
              <div
                className="debug"
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={false}
                    debugOptions={
                      Object {
                        "debugChildren": false,
                      }
                    }
                    id="c"
                  >
                    <div
                      className=""
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug children option: Element overrides enabled child debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debugOptions={
        Object {
          "debugChildren": true,
        }
      }
      id="a"
    >
      <Box
        debug={false}
        debugOptions={
          Object {
            "debugChildren": true,
          }
        }
        id="a"
      >
        <div
          className=""
          id="a"
        >
          <Box.WithDebug
            debug={false}
            id="b"
          >
            <Box
              debug={false}
              debugOptions={
                Object {
                  "debugChildren": true,
                }
              }
              id="b"
            >
              <div
                className=""
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={true}
                    debugOptions={
                      Object {
                        "debugChildren": true,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug"
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug children option: Enable child debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={false}
        id="a"
      >
        <div
          className=""
          id="a"
        >
          <Box.WithDebug
            debugOptions={
              Object {
                "debugChildren": true,
              }
            }
            id="b"
          >
            <Box
              debug={false}
              debugOptions={
                Object {
                  "debugChildren": true,
                }
              }
              id="b"
            >
              <div
                className=""
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={true}
                    debugOptions={
                      Object {
                        "debugChildren": true,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug"
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug children option: Supress child debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={true}
        id="a"
      >
        <div
          className="debug"
          id="a"
        >
          <Box.WithDebug
            debugOptions={
              Object {
                "debugChildren": false,
              }
            }
            id="b"
          >
            <Box
              debug={true}
              debugOptions={
                Object {
                  "debugChildren": false,
                }
              }
              id="b"
            >
              <div
                className="debug"
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={false}
                    debugOptions={
                      Object {
                        "debugChildren": false,
                      }
                    }
                    id="c"
                  >
                    <div
                      className=""
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context: Context has debugging off 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={false}
        id="a"
      >
        <div
          className=""
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              debug={false}
              id="b"
            >
              <div
                className=""
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={false}
                    id="c"
                  >
                    <div
                      className=""
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context: Context has debugging on 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={true}
        id="a"
      >
        <div
          className="debug"
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              debug={true}
              id="b"
            >
              <div
                className="debug"
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={true}
                    id="c"
                  >
                    <div
                      className="debug"
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context: Debugging globally disabled 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debugOptions={
        Object {
          "debugChildren": true,
        }
      }
      id="a"
    >
      <Box
        debug={false}
        debugOptions={
          Object {
            "debugChildren": false,
          }
        }
        id="a"
      >
        <div
          className=""
          id="a"
        >
          <Box.WithDebug
            debug={true}
            id="b"
          >
            <Box
              debug={false}
              debugOptions={
                Object {
                  "debugChildren": false,
                }
              }
              id="b"
            >
              <div
                className=""
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={false}
                    debugOptions={
                      Object {
                        "debugChildren": false,
                      }
                    }
                    id="c"
                  >
                    <div
                      className=""
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context: Element set to debug 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={false}
        id="a"
      >
        <div
          className=""
          id="a"
        >
          <Box.WithDebug
            debug={true}
            id="b"
          >
            <Box
              debug={true}
              id="b"
            >
              <div
                className="debug"
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={false}
                    id="c"
                  >
                    <div
                      className=""
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context: Element supress debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={true}
        id="a"
      >
        <div
          className="debug"
          id="a"
        >
          <Box.WithDebug
            debug={false}
            id="b"
          >
            <Box
              debug={false}
              id="b"
            >
              <div
                className=""
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={true}
                    id="c"
                  >
                    <div
                      className="debug"
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;
